--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: sk_number_pad
+name: sk_numberpad
 description: Fast and easy to use custom number pad library for Flutter
-version: 1.0.0
+version: 0.0.2
 author: Senthil Kumar<senthilece01@gmail.com>
 homepage: https://github.com/senthilece01/SKNumberPad.git
 
